--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: 雪中小屋 #Fytus' awesome title
+title: 雪屋|Snow Cabin #Fytus' awesome title
 email: fytus@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
   To be, or not to be: that is the question.
