Some _config.xml changes.

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minima:
   # generate social links in footer
   social_links:
     #twitter: jekyllrb
-    github:  jekyll
+    github:  fytus
     # devto: jekyll
     # dribbble: jekyll
     # facebook: jekyll
@@ -52,6 +52,8 @@ minima:
 # this and add the path to the pages in order as they should show up
 #header_pages:
 # - about.md
+header_pages:
+ - about.md
 
 # Build settings
 theme: minima
